CORS 설정 개선 및 OPTIONS preflight 요청 허용 (#12)
## 변경 사항

### CORS 설정 수정
- setAllowedOrigins → setAllowedOriginPatterns으로 변경
  - allowCredentials(true)와 함께 사용 시 더 안전
  - Spring Security 5.3+ 모범 사례 준수
- allowedHeaders를 와일드카드(*) 대신 명시적으로 나열
  - CORS 표준 준수 (credentials 사용 시 와일드카드 불가)
- exposedHeaders 추가
  - 클라이언트가 응답 헤더를 읽을 수 있도록 명시

### OPTIONS 요청 허용
- CORS preflight 요청을 위해 OPTIONS 메서드 명시적 허용
- 브라우저의 preflight 요청이 정상 처리되도록 개선

## 해결한 문제
- 프론트엔드에서 발생하던 CORS 에러 해결
- "Access-Control-Allow-Origin header is present" 에러 해결

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>